--- a/Ch04Ex1MovieList/Views/Movie/Delete.cshtml
+++ b/Ch04Ex1MovieList/Views/Movie/Delete.cshtml
@@ -1,5 +1,15 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Movie
 @{
+    ViewBag.Title = "Delete Movie";
 }
+
+<h2>Confirm Delete</h2>
+<h3>@Model.Name (@Model.Year)</h3>
+
+<form asp-action="Delete" method="post">
+    <input type="hidden" asp-for="MovieID" />
+
+    <button type="submit" class="btn btn-primary">Delete</button>
+    <a asp-controller="Home" asp-action="Index"
+        class="btn btn-primary">Cancel</a>
+</form>
