--- a/Ch04Ex1MovieList/Views/Movie/Edit.cshtml
+++ b/Ch04Ex1MovieList/Views/Movie/Edit.cshtml
@@ -1,5 +1,32 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Movie
 @{
+    string title = ViewBag.Action + " Movie";
+    ViewBag.Title = title;
 }
+
+<h2>@ViewBag.Title</h2>
+
+<form asp-action="Edit" method="post">
+    <div asp-asp-validation-summary="All" class="text-danger"></div>
+
+    <div class="form-group">
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Year">Year</label>
+        <input asp-for="Year" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label asp-for="Rating">Rating</label>
+        <input asp-for="Rating" class="form-control" />
+    </div>
+
+    <input type="hidden" asp-for="MovieID" />
+
+    <button type="submit" class="btn btn-primary">@ViewBag.Action</button>
+    <a asp-asp-controller="Home" asp-action="Index"
+        class="btn btn-primary">Cancel</a>
+</form>
